fix(*): actually start the agent